# HAV

./: CMakeLists.txt  README.md  build.bat  launch.ps1
cli/: main_cli.cpp
core/: bindings.cpp  hav_api.py  hav_engine.cpp  hav_engine.hpp
frontend/: index.html
